mongoose/mongoose.h

typedef unsigned __int64 uint64_t;
typedef unsigned char uint8_t;
typedef unsigned short uint16_t;
typedef unsigned int uint32_t;
typedef enum { false = 0, true = 1 } bool;
struct mg_str {
  const char *ptr;  // Pointer to string data
  size_t len;       // String len
};
// Using macro to avoid shadowing C++ struct constructor, see #1298
#define mg_str(s) mg_str_s(s)
EXPORT struct mg_str mg_str(const char *s);
EXPORT bool mg_path_is_sane(const char *path);
EXPORT size_t mg_vxprintf(void (*)(char, void *), void *, const char *fmt, va_list *);
EXPORT size_t mg_xprintf(void (*fn)(char, void *), void *, const char *fmt, ...);
// %M print helper functions
EXPORT size_t mg_print_base64(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_esc(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_hex(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip_port(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip4(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_ip6(void (*out)(char, void *), void *arg, va_list *ap);
EXPORT size_t mg_print_mac(void (*out)(char, void *), void *arg, va_list *ap);
struct mg_timer {
  unsigned long id;         // Timer ID
  uint64_t period_ms;       // Timer period in milliseconds
  uint64_t expire;          // Expiration timestamp in milliseconds
  unsigned flags;           // Possible flags values below
#define MG_TIMER_ONCE 0     // Call function once
#define MG_TIMER_REPEAT 1   // Call function periodically
#define MG_TIMER_RUN_NOW 2  // Call immediately when timer is set
  void (*fn)(void *);       // Function to call
  void *arg;                // Function argument
  struct mg_timer *next;    // Linkage
};
EXPORT void mg_timer_init(struct mg_timer **head, struct mg_timer *timer,
                   uint64_t milliseconds, unsigned flags, void (*fn)(void *),
                   void *arg);
EXPORT void mg_timer_free(struct mg_timer **head, struct mg_timer *);
EXPORT void mg_timer_poll(struct mg_timer **head, uint64_t new_ms);
EXPORT bool mg_timer_expired(uint64_t *expiration, uint64_t period, uint64_t now);
enum { MG_FS_READ = 1, MG_FS_WRITE = 2, MG_FS_DIR = 4 };
// Filesystem API functions
// st() returns MG_FS_* flags and populates file size and modification time
// ls() calls fn() for every directory entry, allowing to list a directory
//
// NOTE: UNIX-style shorthand names for the API functions are deliberately
// chosen to avoid conflicts with some libraries that make macros for e.g.
// stat(), write(), read() calls.
struct mg_fs {
  int (*st)(const char *path, size_t *size, time_t *mtime);  // stat file
  void (*ls)(const char *path, void (*fn)(const char *, void *), void *);
  void *(*op)(const char *path, int flags);             // Open file
  void (*cl)(void *fd);                                 // Close file
  size_t (*rd)(void *fd, void *buf, size_t len);        // Read file
  size_t (*wr)(void *fd, const void *buf, size_t len);  // Write file
  size_t (*sk)(void *fd, size_t offset);                // Set file position
  bool (*mv)(const char *from, const char *to);         // Rename file
  bool (*rm)(const char *path);                         // Delete file
  bool (*mkd)(const char *path);                        // Create directory
};
// File descriptor
struct mg_fd {
  void *fd;
  struct mg_fs *fs;
};
EXPORT struct mg_fd *mg_fs_open(struct mg_fs *fs, const char *path, int flags);
EXPORT void mg_fs_close(struct mg_fd *fd);
EXPORT char *mg_file_read(struct mg_fs *fs, const char *path, size_t *size);
EXPORT bool mg_file_write(struct mg_fs *fs, const char *path, const void *, size_t);
EXPORT bool mg_file_printf(struct mg_fs *fs, const char *path, const char *fmt, ...);
EXPORT void mg_random(void *buf, size_t len);
EXPORT char *mg_random_str(char *buf, size_t len);
EXPORT uint16_t mg_ntohs(uint16_t net);
EXPORT uint32_t mg_ntohl(uint32_t net);
EXPORT uint32_t mg_crc32(uint32_t crc, const char *buf, size_t len);
EXPORT uint64_t mg_millis(void);
struct mg_addr;
EXPORT int mg_check_ip_acl(struct mg_str acl, struct mg_addr *remote_ip);
EXPORT unsigned short mg_url_port(const char *url);
EXPORT int mg_url_is_ssl(const char *url);
EXPORT struct mg_str mg_url_host(const char *url);
EXPORT struct mg_str mg_url_user(const char *url);
EXPORT struct mg_str mg_url_pass(const char *url);
EXPORT const char *mg_url_uri(const char *url);
struct mg_iobuf {
  unsigned char *buf;  // Pointer to stored data
  size_t size;         // Total size available
  size_t len;          // Current number of bytes
  size_t align;        // Alignment during allocation
};
EXPORT int mg_iobuf_init(struct mg_iobuf *, size_t, size_t);
EXPORT int mg_iobuf_resize(struct mg_iobuf *, size_t);
EXPORT void mg_iobuf_free(struct mg_iobuf *);
EXPORT size_t mg_iobuf_add(struct mg_iobuf *, size_t, const void *, size_t);
EXPORT size_t mg_iobuf_del(struct mg_iobuf *, size_t ofs, size_t len);
EXPORT int mg_base64_update(unsigned char p, char *to, int len);
EXPORT int mg_base64_final(char *to, int len);
EXPORT int mg_base64_encode(const unsigned char *p, int n, char *to);
EXPORT int mg_base64_decode(const char *src, int n, char *dst);
typedef struct {
  uint32_t buf[4];
  uint32_t bits[2];
  unsigned char in[64];
} mg_md5_ctx;
EXPORT void mg_md5_init(mg_md5_ctx *c);
EXPORT void mg_md5_update(mg_md5_ctx *c, const unsigned char *data, size_t len);
EXPORT void mg_md5_final(mg_md5_ctx *c, unsigned char[16]);
typedef struct {
  uint32_t state[5];
  uint32_t count[2];
  unsigned char buffer[64];
} mg_sha1_ctx;
EXPORT void mg_sha1_init(mg_sha1_ctx *);
EXPORT void mg_sha1_update(mg_sha1_ctx *, const unsigned char *data, size_t len);
EXPORT void mg_sha1_final(unsigned char digest[20], mg_sha1_ctx *);
struct mg_connection;
typedef void (*mg_event_handler_t)(struct mg_connection *, int ev,
                                   void *ev_data, void *fn_data);
EXPORT void mg_call(struct mg_connection *c, int ev, void *ev_data);
EXPORT void mg_error(struct mg_connection *c, const char *fmt, ...);
enum {
  MG_EV_ERROR,       // Error                        char *error_message
  MG_EV_OPEN,        // Connection created           NULL
  MG_EV_POLL,        // mg_mgr_poll iteration        uint64_t *uptime_millis
  MG_EV_RESOLVE,     // Host name is resolved        NULL
  MG_EV_CONNECT,     // Connection established       NULL
  MG_EV_ACCEPT,      // Connection accepted          NULL
  MG_EV_TLS_HS,      // TLS handshake succeeded      NULL
  MG_EV_READ,        // Data received from socket    long *bytes_read
  MG_EV_WRITE,       // Data written to socket       long *bytes_written
  MG_EV_CLOSE,       // Connection closed            NULL
  MG_EV_HTTP_MSG,    // HTTP request/response        struct mg_http_message *
  MG_EV_HTTP_CHUNK,  // HTTP chunk (partial msg)     struct mg_http_message *
  MG_EV_WS_OPEN,     // Websocket handshake done     struct mg_http_message *
  MG_EV_WS_MSG,      // Websocket msg, text or bin   struct mg_ws_message *
  MG_EV_WS_CTL,      // Websocket control msg        struct mg_ws_message *
  MG_EV_MQTT_CMD,    // MQTT low-level command       struct mg_mqtt_message *
  MG_EV_MQTT_MSG,    // MQTT PUBLISH received        struct mg_mqtt_message *
  MG_EV_MQTT_OPEN,   // MQTT CONNACK received        int *connack_status_code
  MG_EV_SNTP_TIME,   // SNTP time received           uint64_t *epoch_millis
  MG_EV_USER         // Starting ID for user events
};
struct mg_addr {
  uint8_t ip[16];  // Holds IPv4 or IPv6 address, in network byte order
  uint16_t port;   // TCP or UDP port in network byte order
  bool is_ip6;     // True when address is IPv6 address
};
struct mg_mgr {
  struct mg_connection *conns;  // List of active connections
  struct mg_dns dns4;           // DNS for IPv4
  struct mg_dns dns6;           // DNS for IPv6
  int dnstimeout;               // DNS resolve timeout in milliseconds
  bool use_dns6;                // Use DNS6 server by default, see #1532
  unsigned long nextid;         // Next connection ID
  unsigned long timerid;        // Next timer ID
  void *userdata;               // Arbitrary user data pointer
  void *tls_ctx;                // TLS context shared by all TLS sessions
  uint16_t mqtt_id;             // MQTT IDs for pub/sub
  void *active_dns_requests;    // DNS requests in progress
  struct mg_timer *timers;      // Active timers
  int epoll_fd;                 // Used when MG_EPOLL_ENABLE=1
  void *priv;                   // Used by the MIP stack
  size_t extraconnsize;         // Used by the MIP stack
#if MG_ENABLE_FREERTOS_TCP
  SocketSet_t ss;  // NOTE(lsm): referenced from socket struct
#endif
};
struct mg_connection {
  struct mg_connection *next;  // Linkage in struct mg_mgr :: connections
  struct mg_mgr *mgr;          // Our container
  struct mg_addr loc;          // Local address
  struct mg_addr rem;          // Remote address
  void *fd;                    // Connected socket, or LWIP data
  unsigned long id;            // Auto-incrementing unique connection ID
  struct mg_iobuf recv;        // Incoming data
  struct mg_iobuf send;        // Outgoing data
  mg_event_handler_t fn;       // User-specified event handler function
  void *fn_data;               // User-specified function parameter
  mg_event_handler_t pfn;      // Protocol-specific handler function
  void *pfn_data;              // Protocol-specific function parameter
  char data[MG_DATA_SIZE];     // Arbitrary connection data
  void *tls;                   // TLS specific data
  unsigned is_listening : 1;   // Listening connection
  unsigned is_client : 1;      // Outbound (client) connection
  unsigned is_accepted : 1;    // Accepted (server) connection
  unsigned is_resolving : 1;   // Non-blocking DNS resolution is in progress
  unsigned is_arplooking : 1;  // Non-blocking ARP resolution is in progress
  unsigned is_connecting : 1;  // Non-blocking connect is in progress
  unsigned is_tls : 1;         // TLS-enabled connection
  unsigned is_tls_hs : 1;      // TLS handshake is in progress
  unsigned is_udp : 1;         // UDP connection
  unsigned is_websocket : 1;   // WebSocket connection
  unsigned is_mqtt5 : 1;       // For MQTT connection, v5 indicator
  unsigned is_hexdumping : 1;  // Hexdump in/out traffic
  unsigned is_draining : 1;    // Send remaining data, then close and free
  unsigned is_closing : 1;     // Close and free the connection immediately
  unsigned is_full : 1;        // Stop reads, until cleared
  unsigned is_resp : 1;        // Response is still being generated
  unsigned is_readable : 1;    // Connection is ready to read
  unsigned is_writable : 1;    // Connection is ready to write
};
// Utility functions
EXPORT struct mg_timer *mg_timer_add(struct mg_mgr *mgr, uint64_t milliseconds,
                              unsigned flags, void (*fn)(void *), void *arg);
// JSON-RPC request descriptor
struct mg_rpc_req {
  struct mg_rpc **head;  // RPC handlers list head
  struct mg_rpc *rpc;    // RPC handler being called
  mg_pfn_t pfn;          // Response printing function
  void *pfn_data;        // Response printing function data
  void *req_data;        // Arbitrary request data
  struct mg_str frame;   // Request, e.g. {"id":1,"method":"add","params":[1,2]}
};
// JSON-RPC method handler
struct mg_rpc {
  struct mg_rpc *next;              // Next in list
  struct mg_str method;             // Method pattern
  void (*fn)(struct mg_rpc_req *);  // Handler function
  void *fn_data;                    // Handler function argument
};
EXPORT void mg_rpc_add(struct mg_rpc **head, struct mg_str method_pattern,
                void (*handler)(struct mg_rpc_req *), void *handler_data);
EXPORT void mg_rpc_del(struct mg_rpc **head, void (*handler)(struct mg_rpc_req *));