module_windows.jai


    fn:        #type (unknown0: *void) -> void #c_call; // Function to call
    arg:       *void; // Function argument
    next:      *mg_timer; // Linkage
}

mg_timer_init :: (head: **mg_timer, timer: *mg_timer, milliseconds: u64, flags: u32, fn: #type (unknown0: *void) -> void #c_call, arg: *void) -> void #foreign mongoose;

mg_timer_free :: (head: **mg_timer, unknown0: *mg_timer) -> void #foreign mongoose;

mg_timer_poll :: (head: **mg_timer, new_ms: u64) -> void #foreign mongoose;

// t: expiration time, prd: period, now: current time. Return true if expired
mg_timer_expired :: (expiration: *u64, period: u64, now: u64) -> bool #foreign mongoose;

MG_FS :: enum s32 {
    READ  :: 1;
    WRITE :: 2;
    DIR   :: 4;
    MG_FS_READ  :: READ;
    MG_FS_WRITE :: WRITE;
    MG_FS_DIR   :: DIR;
}

// Filesystem API functions
// st() returns MG_FS_* flags and populates file size and modification time
// ls() calls fn() for every directory entry, allowing to list a directory
//
// NOTE: UNIX-style shorthand names for the API functions are deliberately
// chosen to avoid conflicts with some libraries that make macros for e.g.
// stat(), write(), read() calls.
mg_fs :: struct {
    st:  #type (path: *u8, size: *u64, mtime: *time_t) -> s32 #c_call; // stat file
    ls:  #type (path: *u8, fn: #type (unknown0: *u8, unknown1: *void) -> void #c_call, unknown0: *void) -> void #c_call;

    op:  #type (path: *u8, flags: s32) -> *void #c_call; // Open file
    cl:  #type (fd: *void) -> void #c_call; // Close file
    rd:  #type (fd: *void, buf: *void, len: u64) -> u64 #c_call; // Read file
    wr:  #type (fd: *void, buf: *void, len: u64) -> u64 #c_call; // Write file
    sk:  #type (fd: *void, offset: u64) -> u64 #c_call; // Set file position
    mv:  #type (from: *u8, to: *u8) -> bool #c_call; // Rename file
    rm:  #type (path: *u8) -> bool #c_call; // Delete file
    mkd: #type (path: *u8) -> bool #c_call; // Create directory
}

// File descriptor
mg_fd :: struct {
    fd: *void;
    fs: *mg_fs;
}

mg_fs_open :: (fs: *mg_fs, path: *u8, flags: s32) -> *mg_fd #foreign mongoose;

mg_fs_close :: (fd: *mg_fd) -> void #foreign mongoose;

mg_fs_ls :: (fs: *mg_fs, path: *u8, buf: *u8, len: u64) -> bool #foreign mongoose;

mg_file_read :: (fs: *mg_fs, path: *u8) -> mg_str #foreign mongoose;

mg_file_write :: (fs: *mg_fs, path: *u8, unknown0: *void, unknown1: u64) -> bool #foreign mongoose;

mg_file_printf_CFormat :: (fs: *mg_fs, path: *u8, fmt: *u8, __args: ..Any) -> bool #foreign mongoose "mg_file_printf";
mg_file_printf :: (fs: *mg_fs, path: *u8, fmt: string, __args: ..Any) -> bool {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    return mg_file_printf_CFormat(fs, path, "%s", formatted_text.data);
} @PrintLike

// Packed API
mg_unpack :: (path: *u8, size: *u64, mtime: *time_t) -> *u8 #foreign mongoose;

mg_unlist :: (no: u64) -> *u8 #foreign mongoose;

mg_unpacked :: (path: *u8) -> mg_str #foreign mongoose;

// Not using memset for zeroing memory, cause it can be dropped by compiler
// See https://github.com/cesanta/mongoose/pull/1265
mg_bzero :: (buf: *u8, len: u64) -> void #foreign mongoose;

mg_random :: (buf: *void, len: u64) -> bool #foreign mongoose;

mg_random_str :: (buf: *u8, len: u64) -> *u8 #foreign mongoose;

mg_ntohs :: (net: u16) -> u16 #foreign mongoose;

mg_ntohl :: (net: u32) -> u32 #foreign mongoose;

mg_crc32 :: (crc: u32, buf: *u8, len: u64) -> u32 #foreign mongoose;

mg_millis :: () -> u64 #foreign mongoose;

mg_path_is_sane :: (path: mg_str) -> bool #foreign mongoose;

mg_check_ip_acl :: (acl: mg_str, remote_ip: *mg_addr) -> s32 #foreign mongoose;

mg_url_port :: (url: *u8) -> u16 #foreign mongoose;

mg_url_is_ssl :: (url: *u8) -> s32 #foreign mongoose;

mg_url_host :: (url: *u8) -> mg_str #foreign mongoose;

mg_url_user :: (url: *u8) -> mg_str #foreign mongoose;

mg_url_pass :: (url: *u8) -> mg_str #foreign mongoose;

mg_url_uri :: (url: *u8) -> *u8 #foreign mongoose;

mg_iobuf :: struct {
    buf:   *u8; // Pointer to stored data
    size:  u64; // Total size available
    len:   u64; // Current number of bytes
    align: u64; // Alignment during allocation
}

mg_iobuf_init :: (unknown0: *mg_iobuf, unknown1: u64, unknown2: u64) -> s32 #foreign mongoose;

mg_iobuf_resize :: (unknown0: *mg_iobuf, unknown1: u64) -> s32 #foreign mongoose;

mg_iobuf_free :: (unknown0: *mg_iobuf) -> void #foreign mongoose;

mg_iobuf_add :: (unknown0: *mg_iobuf, unknown1: u64, unknown2: *void, unknown3: u64) -> u64 #foreign mongoose;

mg_iobuf_del :: (unknown0: *mg_iobuf, ofs: u64, len: u64) -> u64 #foreign mongoose;

mg_base64_update :: (input_byte: u8, buf: *u8, len: u64) -> u64 #foreign mongoose;

mg_base64_final :: (buf: *u8, len: u64) -> u64 #foreign mongoose;

mg_base64_encode :: (p: *u8, n: u64, buf: *u8, unknown0: u64) -> u64 #foreign mongoose;

mg_base64_decode :: (src: *u8, n: u64, dst: *u8, unknown0: u64) -> u64 #foreign mongoose;

mg_md5_ctx :: struct {
    buf:  [4] u32;
    bits: [2] u32;
    in:   [64] u8;
}

/*
* Start MD5 accumulation.  Set bit count to 0 and buffer to mysterious
* initialization constants.
*/
mg_md5_init :: (c: *mg_md5_ctx) -> void #foreign mongoose;

mg_md5_update :: (c: *mg_md5_ctx, data: *u8, len: u64) -> void #foreign mongoose;

mg_md5_final :: (c: *mg_md5_ctx, unknown0: *[16] u8) -> void #foreign mongoose;

mg_sha1_ctx :: struct {
    state:  [5] u32;
    count:  [2] u32;
    buffer: [64] u8;
}

mg_sha1_init :: (unknown0: *mg_sha1_ctx) -> void #foreign mongoose;

mg_sha1_update :: (unknown0: *mg_sha1_ctx, data: *u8, len: u64) -> void #foreign mongoose;

mg_sha1_final :: (digest: *[20] u8, unknown0: *mg_sha1_ctx) -> void #foreign mongoose;

// https://github.com/B-Con/crypto-algorithms
// Author:     Brad Conte (brad AT bradconte.com)
// Disclaimer: This code is presented "as is" without any guarantees.
// Details:    Defines the API for the corresponding SHA1 implementation.
// Copyright:  public domain
mg_sha256_ctx :: struct {
    state:  [8] u32;
    bits:   u64;
    len:    u32;
    buffer: [64] u8;
}

mg_sha256_init :: (unknown0: *mg_sha256_ctx) -> void #foreign mongoose;

mg_sha256_update :: (unknown0: *mg_sha256_ctx, data: *u8, len: u64) -> void #foreign mongoose;

// TODO: make final reusable (remove side effects)
mg_sha256_final :: (digest: *[32] u8, unknown0: *mg_sha256_ctx) -> void #foreign mongoose;

mg_hmac_sha256 :: (dst: *[32] u8, key: *u8, keysz: u64, data: *u8, datasz: u64) -> void #foreign mongoose;

mg_tls_x25519 :: (out: *[32] u8, scalar: *[32] u8, x1: *[32] u8, clamp: s32) -> s32 #foreign mongoose;

/******************************************************************************
*  AES_CONTEXT : cipher context / holds inter-call data
******************************************************************************/
aes_context :: struct {
    mode:   s32; // 1 for Encryption, 0 for Decryption
    rounds: s32; // keysize-based rounds count
    rk:     *u32; // pointer to current round key
    buf:    [68] u32; // key expansion buffer
}

MG_UECC_Curve_t :: struct {}
MG_UECC_Curve :: *MG_UECC_Curve_t;

/* MG_UECC_RNG_Function type
The RNG function should fill 'size' random bytes into 'dest'. It should return 1
if 'dest' was filled with random data, or 0 if the random data could not be
generated. The filled-in values should be either truly random, or from a
cryptographically-secure PRNG.

A correctly functioning RNG function must be set (using mg_uecc_set_rng())
before calling mg_uecc_make_key() or mg_uecc_sign().

Setting a correctly functioning RNG function improves the resistance to
side-channel attacks for mg_uecc_shared_secret() and
mg_uecc_sign_deterministic().

A correct RNG function is set by default when building for Windows, Linux, or OS
X. If you are building on another POSIX-compliant system that supports
/dev/random or /dev/urandom, you can define MG_UECC_POSIX to use the predefined
RNG. For embedded platforms there is no predefined RNG function; you must
provide your own.
*/
MG_UECC_RNG_Function :: #type (dest: *u8, size: u32) -> s32 #c_call;

/* MG_UECC_HashContext structure.
This is used to pass in an arbitrary hash function to
mg_uecc_sign_deterministic(). The structure will be used for multiple hash
computations; each time a new hash is computed, init_hash() will be called,
followed by one or more calls to update_hash(), and finally a call to
finish_hash() to produce the resulting hash.

The intention is that you will create a structure that includes
MG_UECC_HashContext followed by any hash-specific data. For example:

typedef struct SHA256_HashContext {
MG_UECC_HashContext uECC;
SHA256_CTX ctx;
} SHA256_HashContext;

void init_SHA256(MG_UECC_HashContext *base) {
SHA256_HashContext *context = (SHA256_HashContext *)base;
SHA256_Init(&context->ctx);
}

void update_SHA256(MG_UECC_HashContext *base,
const uint8_t *message,
unsigned message_size) {
SHA256_HashContext *context = (SHA256_HashContext *)base;
SHA256_Update(&context->ctx, message, message_size);
}

void finish_SHA256(MG_UECC_HashContext *base, uint8_t *hash_result) {
SHA256_HashContext *context = (SHA256_HashContext *)base;
SHA256_Final(hash_result, &context->ctx);
}

... when signing ...
{
uint8_t tmp[32 + 32 + 64];
SHA256_HashContext ctx = {{&init_SHA256, &update_SHA256, &finish_SHA256, 64,
32, tmp}}; mg_uecc_sign_deterministic(key, message_hash, &ctx.uECC, signature);
}
*/
MG_UECC_HashContext :: struct {
    init_hash:   #type (_context: *MG_UECC_HashContext) -> void #c_call;
    update_hash: #type (_context: *MG_UECC_HashContext, message: *u8, message_size: u32) -> void #c_call;

    finish_hash: #type (_context: *MG_UECC_HashContext, hash_result: *u8) -> void #c_call;

    block_size:  u32; /* Hash function block size in bytes, eg 64 for SHA-256. */

    result_size: u32; /* Hash function result size in bytes, eg 32 for SHA-256. */
    /* Must point to a buffer of at least (2 * result_size +
    block_size) bytes. */
    tmp:         *u8;
}

wordcount_t :: s8;
bitcount_t :: s16;
cmpresult_t :: s8;

mg_uecc_word_t :: u64;

mg_event_handler_t :: #type (unknown0: *mg_connection, ev: s32, ev_data: *void) -> void #c_call;

mg_call :: (c: *mg_connection, ev: s32, ev_data: *void) -> void #foreign mongoose;

mg_error_CFormat :: (c: *mg_connection, fmt: *u8, __args: ..Any) -> void #foreign mongoose "mg_error";
mg_error :: (c: *mg_connection, fmt: string, __args: ..Any) {
    push_allocator(temp);
    formatted_text_builder: String_Builder;
    print_to_builder(*formatted_text_builder, fmt, ..__args);
    append(*formatted_text_builder, "\0");
    formatted_text := builder_to_string(*formatted_text_builder);
    mg_error_CFormat(c, "%s", formatted_text.data);
} @PrintLike

MG_EV :: enum s32 {
    ERROR     :: 0;
    OPEN      :: 1;
    POLL      :: 2;
    RESOLVE   :: 3;
    CONNECT   :: 4;
    ACCEPT    :: 5;
    TLS_HS    :: 6;
    READ      :: 7;
    WRITE     :: 8;
    CLOSE     :: 9;
    HTTP_HDRS :: 10;
    HTTP_MSG  :: 11;
    WS_OPEN   :: 12;
    WS_MSG    :: 13;
    WS_CTL    :: 14;
    MQTT_CMD  :: 15;
    MQTT_MSG  :: 16;
    MQTT_OPEN :: 17;
    SNTP_TIME :: 18;
    WAKEUP    :: 19;
    USER      :: 20;

    MG_EV_ERROR     :: ERROR;
    MG_EV_OPEN      :: OPEN;
    MG_EV_POLL      :: POLL;
    MG_EV_RESOLVE   :: RESOLVE;
    MG_EV_CONNECT   :: CONNECT;
    MG_EV_ACCEPT    :: ACCEPT;
    MG_EV_TLS_HS    :: TLS_HS;
    MG_EV_READ      :: READ;
    MG_EV_WRITE     :: WRITE;
    MG_EV_CLOSE     :: CLOSE;
    MG_EV_HTTP_HDRS :: HTTP_HDRS;
    MG_EV_HTTP_MSG  :: HTTP_MSG;
    MG_EV_WS_OPEN   :: WS_OPEN;
    MG_EV_WS_MSG    :: WS_MSG;
    MG_EV_WS_CTL    :: WS_CTL;
    MG_EV_MQTT_CMD  :: MQTT_CMD;
    MG_EV_MQTT_MSG  :: MQTT_MSG;
    MG_EV_MQTT_OPEN :: MQTT_OPEN;
    MG_EV_SNTP_TIME :: SNTP_TIME;
    MG_EV_WAKEUP    :: WAKEUP;
    MG_EV_USER      :: USER;
}
